fix: Home page alignments

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -4,9 +4,14 @@
 }
 
 .logo {
-  margin: 2vh;
+  margin: 2vw;
+}
+
+.menu-container {
+  margin: 0vw;
 }
 
 .header-text {
   font-size: 2em;
 }
+
